# pam_rps

./: LICENSE  Makefile.am  README  autogen  configure.ac  pam_rps.spec
src/: Makefile.am  main.c  pam_rps.8.in  pam_rps.c
